# clang-plugin-playground

./: CMakeLists.txt  README.md  cmake-config.sh
compiler/: CMakeLists.txt  compiler.cpp
lib/: CMakeLists.txt  LACommenter.cpp
test/: run-test.sh  test-lacommenter.c
